# kaya-wxt

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
.github/scripts/: rename-daemon-binaries.sh
.github/workflows/: release.yml
daemon/src/: main.rs
doc/: PROMPTS.md
doc/plan/: 2026-02-20-rewrite-kaya-firefox-to-kaya-wxt.md  2026-02-21-release-chrome-edge-extensions.md  2026-02-22-01-r-opfs-storage-and-optional-daemon.md  2026-02-22-03-add-safari-support.md  2026-02-22-04-green-icon-flash-feedback.md  2026-02-22-05-release-script-version-sync.md  2026-02-22-adjustments-opfs-root-config-words.md  2026-02-22-fix-release-workflow.md  2026-02-26-encrypt-stored-password-at-rest.md  PLAN.md
doc/stores/: STORES.md  listing.md
extension/: package.json  wxt.config.ts
extension/entrypoints/: background.ts
extension/entrypoints/options/: main.ts
extension/entrypoints/popup/: main.ts
extension/utils/: config.ts  crypto.ts  daemon.ts  opfs.ts  sync.ts
nativehost/: Cargo.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
nativehost/packaging/: build-deb.sh  build-pkg.sh  build-rpm.sh
nativehost/src/: extra_browsers.rs  main.rs
nativehost/tests/: sync_test.rs
safari/Save Button/Save Button.xcodeproj/: project.pbxproj
safari/Save Button/Save Button.xcodeproj/project.xcworkspace/xcuserdata/steven.xcuserdatad/: UserInterfaceState.xcuserstate
safari/Save Button/Save Button.xcodeproj/xcuserdata/steven.xcuserdatad/xcschemes/: xcschememanagement.plist
safari/Save Button/Shared (App)/: ViewController.swift
